test/Common/LinkerScriptParsing/Errors/Sections/OutputSectionPrologue/OutSectConstraints/Inputs/script2.t
SECTIONS {
  FOO : ONLY_IF_RO ONLY_IF_RW { *(*foo*) }
}